RESOLVED FIXED88146
DFG should not emit unnecessary speculation checks when performing an int32 to double conversion on a value that is proved to be a number, predicted to be an int32, but not proved to be an int32
https://bugs.webkit.org/show_bug.cgi?id=88146
Summary DFG should not emit unnecessary speculation checks when performing an int32 t...
Filip Pizlo
Reported 2012-06-01 16:13:19 PDT
Patch forthcoming.
Attachments
the patch (11.58 KB, patch)
2012-06-01 16:14 PDT, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-06-01 16:14:56 PDT
Created attachment 145400 [details] the patch
Filip Pizlo
Comment 2 2012-06-01 16:19:24 PDT
Note You need to log in before you can comment on or make changes to this bug.