DFG should not emit unnecessary speculation checks when performing an int32 to double conversion on a value that is proved to be a number, predicted to be an int32, but not proved to be an int32 https://bugs.webkit.org/show_bug.cgi?id=88146

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileInt32ToDouble):

LayoutTests:

* fast/js/dfg-int32-to-double-on-known-number-expected.txt: Added.
* fast/js/dfg-int32-to-double-on-known-number.html: Added.
* fast/js/script-tests/dfg-int32-to-double-on-known-number.js: Added.
(foo.bar):
(foo):



Canonical link: https://commits.webkit.org/105975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119299 268f45cc-cd09-0410-ab3c-d52691b4dbfc